Added Payment module and top-selling item feature